--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,9 @@
   "projects": {
     "first-app": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+		"skipTests": true
+	  },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -27,6 +29,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -85,6 +88,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
