--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-	"start": "cd src && nodemon server.ts",
+    "start": "cd src && nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,11 +13,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "msnodesqlv8": "^4.5.0",
+    "mssql": "^11.0.1",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/mssql": "^9.1.7",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   }
