--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -8,6 +8,27 @@
       "schematics": {
 		"@schematics/angular:component": {
           "skipTests": true
+        },
+		"@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        },
+        "@schematics/angular:interceptor": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:resolver": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
         }
 	  },
       "root": "",
