--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -7,7 +7,8 @@
       "projectType": "application",
       "schematics": {
 		"@schematics/angular:component": {
-          "skipTests": true
+          "skipTests": true,
+		  "style": "scss"
         },
 		"@schematics/angular:class": {
           "skipTests": true
@@ -53,7 +54,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -112,7 +113,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
