--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^9.1.2",
     "mssql": "^11.0.1",
     "rxjs": "~7.8.0",
+    "sass": "^1.86.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
