--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,12 +1,18 @@
 {
-    "compilerOptions": {
-      "module": "CommonJS",
-      "moduleResolution": "node",
-      "strict": true,
-      "outDir": "./built",
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "esModuleInterop": true
-    },
-    "include": ["src/**/*"],
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@frontend/*": ["../frontend/src/*"]
+		},
+		"module": "CommonJS",
+		"moduleResolution": "node",
+		"strict": true,
+		"outDir": "./built",
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		"esModuleInterop": true
+	},
+	"include": [
+		"src/**/*"
+	],
 }
