--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.0",
     "concurrently": "^9.1.2",
     "mssql": "^11.0.1",
+    "randexp": "^0.5.3",
     "rxjs": "~7.8.0",
     "sass": "^1.86.0",
     "tslib": "^2.3.0",
